web-infras/parser/tests/fixtures/esprima/ES6/binding-pattern/array-pattern/invalid-strict-for-let-let/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,29)
1|"use strict"; for (let [x = let];;) {}
 |                           ^
[SyntaxError]: Missing initializer in destructuring declaration. (1,24)
1|"use strict"; for (let [x = let];;) {}
 |                      ^
